src/tui/snapshots/control_acceso__tui__visual_tests__Menu_80x24_Classic.snap
---
source: src/tui/visual_tests.rs
expression: volcado
---
=== texto ===
                                                                                
 BRISAS CLI                                           Operador de prueba · ROOT 
 MENÚ PRINCIPAL                                                           ··:·· 
 ────────────────────────────────────────────────────────────────────────────── 
                                                                                
                          OPERACIÓN                                             
                          > 1   Nuevo ingreso                                   
                            2   Ingresos activos                                
                            3   Historial                                       
                          ADMINISTRACIÓN                                        
                            4   Contratistas                                    
                            5   Empresas                                        
                            6   Usuarios                                        
                            7   Auditoría                                       
                            8   Respaldos                                       
                          SESIÓN                                                
                            9   Cambiar mi contraseña                           
                            L   Cerrar sesión                                   
                            Q   Salir                                           
                                                                                
 Registrar la entrada de un contratista.                                        
 ↑↓ Seleccionar  ENTER Abrir  1-9 Acceso rápido  L Cerrar sesión  Q Salir       
 F2 Salida rápida  F7 Tema                                                      
                                                                                

=== estilos ===
"                                                                                " fg=Rgb(196, 220, 199) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"BRISAS CLI" fg=Rgb(91, 224, 123) bg=Black mod=BOLD
"                                           " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"Operador de prueba · ROOT" fg=Rgb(105, 135, 111) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"MENÚ PRINCIPAL" fg=Rgb(91, 224, 123) bg=Black mod=BOLD
"                                                           " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"··:··" fg=Rgb(238, 184, 78) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"──────────────────────────────────────────────────────────────────────────────" fg=Rgb(76, 119, 85) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                          " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"OPERACIÓN" fg=Rgb(105, 135, 111) bg=Black mod=NONE
"                                             " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                          " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"> 1   Nuevo ingreso" fg=Black bg=Rgb(91, 224, 123) mod=BOLD
"                                   " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                            2   Ingresos activos                                " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                            3   Historial                                       " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                          " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"ADMINISTRACIÓN" fg=Rgb(105, 135, 111) bg=Black mod=NONE
"                                        " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                            4   Contratistas                                    " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                            5   Empresas                                        " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                            6   Usuarios                                        " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                            7   Auditoría                                       " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                            8   Respaldos                                       " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                          " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"SESIÓN" fg=Rgb(105, 135, 111) bg=Black mod=NONE
"                                                " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                            9   Cambiar mi contraseña                           " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                            L   Cerrar sesión                                   " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                            Q   Salir                                           " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                " fg=Rgb(196, 220, 199) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"Registrar la entrada de un contratista.                                       " fg=Rgb(105, 135, 111) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"↑↓" fg=Rgb(91, 224, 123) bg=Black mod=BOLD
" Seleccionar  " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"ENTER" fg=Rgb(91, 224, 123) bg=Black mod=BOLD
" Abrir  " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"1-9" fg=Rgb(91, 224, 123) bg=Black mod=BOLD
" Acceso rápido  " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"L" fg=Rgb(91, 224, 123) bg=Black mod=BOLD
" Cerrar sesión  " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"Q" fg=Rgb(91, 224, 123) bg=Black mod=BOLD
" Salir       " fg=Rgb(196, 220, 199) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"F2" fg=Rgb(91, 224, 123) bg=Black mod=BOLD
" Salida rápida  " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"F7" fg=Rgb(91, 224, 123) bg=Black mod=BOLD
" Tema                                                      " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                " fg=Rgb(196, 220, 199) bg=Black mod=NONE
